`Added Services component and related files, updated import statements and font imports.`

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   max-width: 1920px;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&family=Outfit&display=swap');
 
 @tailwind base;
 @tailwind components;
