--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 *{
   max-width: 1920px;
+  /* margin: 0 auto; */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&family=Outfit&display=swap');
